<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/bg_white_6"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvw_lottery_name"
            style="@style/style_item_report_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="河内5分彩" />

        <TextView
            android:id="@+id/tv_bet_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bt_report"
            android:paddingStart="9dp"
            android:paddingTop="3dp"
            android:paddingEnd="9dp"
            android:paddingBottom="3dp"
            android:text="再来一注"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_bet_details"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bet_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_report"
            android:paddingStart="9dp"
            android:paddingTop="3dp"
            android:paddingEnd="9dp"
            android:paddingBottom="3dp"
            android:text="注单详情"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/style_item_ll_row"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/style_item_report_title"
            android:text="@string/txt_bt_amount2" />

        <TextView
            style="@style/style_item_report_title_center"
            android:text="@string/txt_bt_play_type" />

        <TextView
            style="@style/style_item_report_title_end"
            android:text="@string/txt_sprize_amount2" />
    </LinearLayout>

    <LinearLayout style="@style/style_item_ll_row">

        <TextView
            android:id="@+id/tvw_bet"
            style="@style/style_item_report_value"
            tools:text="5.00" />

        <TextView
            android:id="@+id/tvw_method_name"
            style="@style/style_item_report_value_center"
            tools:text="后三码后三直选" />

        <TextView
            android:id="@+id/tvw_bonus"
            style="@style/style_item_report_value_end"
            tools:text="0.0000" />
    </LinearLayout>

    <View
        style="@style/style_filter_info_dividing"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp" />

    <LinearLayout style="@style/style_item_ll_row">

        <TextView
            style="@style/style_item_report_title"
            android:layout_weight="0"
            android:text="@string/txt_user_name_s" />

        <TextView
            android:id="@+id/tvw_username"
            style="@style/style_item_report_title"
            tools:text="tst033" />
    </LinearLayout>

    <LinearLayout style="@style/style_item_ll_row">

        <TextView
            style="@style/style_item_report_title"
            android:layout_weight="0"
            android:text="@string/txt_status_s" />

        <TextView
            android:id="@+id/tvw_status"
            style="@style/style_item_report_title"
            tools:text="未中奖" />
    </LinearLayout>

    <LinearLayout
        style="@style/style_item_ll_row"
        android:visibility="gone">

        <TextView
            style="@style/style_item_report_title"
            android:layout_weight="0"
            android:text="@string/txt_bt_date_s" />

        <TextView
            android:id="@+id/tvw_game_date"
            style="@style/style_item_report_title"
            tools:text="2024-01-12 14:41:22" />
    </LinearLayout>

</LinearLayout>