<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clr_transparent"
        android:orientation="vertical"
        tools:ignore="MissingDefaultResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_dialog_top_main"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="追号详情"
                android:textColor="@color/clr_white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivw_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="close"
                android:padding="4dp"
                android:src="@mipmap/ic_pop_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:background="@color/clr_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:visibility="invisible" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="追号编号：" />

                    <TextView
                        android:id="@+id/tvw_project_id"
                        style="@style/style_item_report_value"
                        tools:text="D20240130-141***EEF" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="追号时间：" />

                    <TextView
                        android:id="@+id/tvw_write_time"
                        style="@style/style_item_report_value"
                        tools:text="2024-01-13 13:53:53" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="起始期号：" />

                    <TextView
                        android:id="@+id/tv_start_issue"
                        style="@style/style_item_report_value"
                        tools:text="testkite" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="@string/txt_cp_acc_s" />

                    <TextView
                        android:id="@+id/tvw_username"
                        style="@style/style_item_report_value"
                        tools:text="testkite" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="@string/txt_lottery_name_s" />

                    <TextView
                        android:id="@+id/tvw_lottery_name"
                        style="@style/style_item_report_value"
                        tools:text="河内5分彩" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="@string/txt_method_name_s" />

                    <TextView
                        android:id="@+id/tvw_method_name"
                        style="@style/style_item_report_value"
                        tools:text="后三码后三直选" />
                </LinearLayout>

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="模式：" />

                    <TextView
                        android:id="@+id/tvw_modes"
                        style="@style/style_item_report_value"
                        tools:text="2元" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="追号期数：" />

                    <TextView
                        android:id="@+id/tv_chase_issue"
                        style="@style/style_item_report_value"
                        tools:text="6" />
                </LinearLayout>

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="完成期数：" />

                    <TextView
                        android:id="@+id/tv_complete_issue"
                        style="@style/style_item_report_value"
                        tools:text="6" />
                </LinearLayout>

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="取消期数：" />

                    <TextView
                        android:id="@+id/tv_cancel_issue"
                        style="@style/style_item_report_value"
                        tools:text="0" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="完成金额：" />

                    <TextView
                        android:id="@+id/tv_finish_price"
                        style="@style/style_item_report_value"
                        tools:text="0.0000" />
                </LinearLayout>

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="取消金额：" />

                    <TextView
                        android:id="@+id/tv_cancel_price"
                        style="@style/style_item_report_value"
                        tools:text="0.0000" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="中奖后终止任务：" />

                    <TextView
                        android:id="@+id/tvw_task"
                        style="@style/style_item_report_value"
                        tools:text="是" />
                </LinearLayout>

                <LinearLayout style="@style/style_item_ll_row">

                    <TextView
                        style="@style/style_item_report_title_end2"
                        android:text="@string/txt_bt_status_t" />

                    <TextView
                        android:id="@+id/tvw_status"
                        style="@style/style_item_report_value"
                        tools:text="未中奖" />
                </LinearLayout>

                <View
                    style="@style/style_filter_info_dividing"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <TextView
                    style="@style/style_item_report_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txt_bt_content_s"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvw_code"
                    style="@style/style_item_report_value"
                    tools:text="1,1,1" />

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rv_chasing"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/clr_main_03">

                        <CheckBox
                            android:id="@+id/cb_all_issue"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:button="@drawable/checkbox_item"
                            android:text="奖期"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/tv1"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="追号倍数"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/tv2" />

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="追号状态"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/tv3" />

                        <TextView
                            android:id="@+id/tv3"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="注单详情"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_chase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>